# GameOfLife

./: CMakeLists.txt  GOL.cpp  GOL.hpp  GOLRenderer.cpp  GOLRenderer.hpp  Graphics.cpp  Graphics.hpp  Main.cpp  README.md  Window.cpp  Window.hpp
